--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "debug": "ndb app.js"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.6",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "ndb": "^1.1.5"
   }
 }
