--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.5.1",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "nodemailer": "^6.7.7",
     "nodemon": "^2.0.19",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "ndb": "^1.1.5"
