--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.6",
     "nodemailer": "^6.7.7",
-    "nodemon": "^2.0.19",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "ndb": "^1.1.5"
+    "ndb": "^1.1.5",
+    "nodemon": "^2.0.19"
   }
 }
